--- a/index.html
+++ b/index.html
@@ -3,86 +3,70 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ChatGPT Web | Modern Website</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>😂 Anubhab Comedy Show 😂</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
-    * { font-family: 'Poppins', sans-serif; }
+    body {
+      font-family: "Comic Sans MS", cursive, sans-serif;
+      background: linear-gradient(135deg, #ffe259, #ffa751);
+      text-align: center;
+      padding: 50px;
+    }
+    h1 {
+      font-size: 3em;
+      color: #ff1e56;
+      text-shadow: 2px 2px yellow;
+    }
+    p {
+      font-size: 1.5em;
+      color: #333;
+    }
+    button {
+      background: #ff1e56;
+      color: white;
+      border: none;
+      padding: 15px 25px;
+      font-size: 1.2em;
+      border-radius: 12px;
+      cursor: pointer;
+      margin-top: 20px;
+      box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+      transition: 0.3s;
+    }
+    button:hover {
+      background: #ff5e78;
+      transform: scale(1.1);
+    }
+    #joke {
+      margin-top: 30px;
+      font-size: 1.8em;
+      color: #004d40;
+      font-weight: bold;
+      padding: 20px;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0px 3px 6px rgba(0,0,0,0.2);
+    }
   </style>
 </head>
-<body class="bg-gray-50 text-gray-800">
+<body>
+  <h1>😂 Welcome to Anubhab Comedy Show 😂</h1>
+  <p>Press the button below for instant comedy dose!</p>
+  <button onclick="tellJoke()">🤣 Give Me a Joke 🤣</button>
+  <div id="joke"></div>
 
-  <!-- Navbar -->
-  <nav class="fixed top-0 left-0 w-full bg-white shadow-md z-50">
-    <div class="max-w-7xl mx-auto flex justify-between items-center px-6 py-4">
-      <h1 class="text-2xl font-bold text-indigo-600">ChatGPT Web</h1>
-      <div class="hidden md:flex space-x-6">
-        <a href="#home" class="hover:text-indigo-600">Home</a>
-        <a href="#about" class="hover:text-indigo-600">About</a>
-        <a href="#services" class="hover:text-indigo-600">Services</a>
-        <a href="#contact" class="hover:text-indigo-600">Contact</a>
-      </div>
-    </div>
-  </nav>
+  <script>
+    const jokes = [
+      "Teacher: Tum exam me late kyun aaye? 🤔<br> Student: Sir paper me likha tha 'Answer in brief'... to brief me late ho gaya! 😂",
+      "Doctor: Aapko araam ki zarurat hai.<br> Patient: Doctor sahab, araam ka to loan chahiye tha, dawa kyun de diya? 🤣",
+      "Pappu: Pyar andha hota hai...<br> Gappu: Aur shaadi aankh khol deti hai! 😂",
+      "Friend: Aaj kal tu itna hans kyun raha hai?<br> Me: Kyunki hansna free hai, tax sirf income pe lagta hai! 🤣",
+      "Wife: Tum mujhe kabse ignore kar rahe ho!<br> Husband: Jabse mobile me 'Do Not Disturb' option aaya hai... 😂"
+    ];
 
-  <!-- Hero -->
-  <section id="home" class="pt-28 min-h-screen flex items-center justify-center bg-gradient-to-r from-indigo-500 to-purple-600 text-white">
-    <div class="text-center px-4">
-      <h2 class="text-4xl md:text-6xl font-bold mb-6">Build Modern Websites Fast</h2>
-      <p class="text-lg mb-6">With ChatGPT templates, you can create responsive, professional sites in minutes.</p>
-      <div class="flex flex-wrap justify-center gap-4">
-        <a href="#services" class="bg-white text-indigo-600 px-6 py-3 rounded-full font-semibold hover:bg-gray-100">Get Started</a>
-        <a href="#about" class="border border-white px-6 py-3 rounded-full font-semibold hover:bg-white/20">Learn More</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- About -->
-  <section id="about" class="py-20 bg-white">
-    <div class="max-w-6xl mx-auto px-6 text-center">
-      <h3 class="text-3xl font-bold mb-4">Why Choose ChatGPT Web?</h3>
-      <p class="text-gray-600 max-w-2xl mx-auto">We deliver clean, optimized, and mobile-ready designs that scale perfectly for your business needs.</p>
-    </div>
-  </section>
-
-  <!-- Services -->
-  <section id="services" class="py-20 bg-gray-100">
-    <div class="max-w-6xl mx-auto px-6">
-      <h3 class="text-3xl font-bold text-center mb-12">Our Services</h3>
-      <div class="grid md:grid-cols-3 gap-8">
-        <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition">
-          <h4 class="text-xl font-semibold mb-2">Web Design</h4>
-          <p class="text-gray-600">Modern, clean, and engaging UI designs built with TailwindCSS.</p>
-        </div>
-        <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition">
-          <h4 class="text-xl font-semibold mb-2">Development</h4>
-          <p class="text-gray-600">Full-stack development solutions for startups and enterprises.</p>
-        </div>
-        <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition">
-          <h4 class="text-xl font-semibold mb-2">SEO Optimization</h4>
-          <p class="text-gray-600">Boost your website ranking and visibility across search engines.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact" class="py-20 bg-white">
-    <div class="max-w-4xl mx-auto px-6 text-center">
-      <h3 class="text-3xl font-bold mb-6">Get in Touch</h3>
-      <form class="grid gap-4">
-        <input type="text" placeholder="Your Name" class="p-3 border rounded-lg">
-        <input type="email" placeholder="Your Email" class="p-3 border rounded-lg">
-        <textarea placeholder="Your Message" class="p-3 border rounded-lg"></textarea>
-        <button class="bg-indigo-600 text-white py-3 rounded-lg font-semibold hover:bg-indigo-700">Send Message</button>
-      </form>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="bg-gray-900 text-white text-center py-6">
-    <p>&copy; 2025 ChatGPT Web. All rights reserved.</p>
-  </footer>
-
+    function tellJoke() {
+      const randomIndex = Math.floor(Math.random() * jokes.length);
+      document.getElementById("joke").innerHTML = jokes[randomIndex];
+    }
+  </script>
 </body>
 </html>
