--- a/index.html
+++ b/index.html
@@ -3,76 +3,111 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comedy Zone</title>
+  <title>🤣 Unlimited Jokes Website 🤣</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #fff8dc;
-      text-align: center;
+      font-family: "Comic Sans MS", cursive, sans-serif;
       margin: 0;
       padding: 0;
+      text-align: center;
+      background: #fffae6;
+      transition: background 0.8s ease;
+      overflow-x: hidden;
     }
     h1 {
-      color: #ff4500;
-      margin: 20px 0;
+      background: #ff4d4d;
+      color: white;
+      padding: 15px;
+      margin: 0;
+      font-size: 28px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
     }
-    .container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
+    #joke-box {
+      margin: 30px auto;
       padding: 20px;
+      width: 90%;
+      max-width: 700px;
+      background: white;
+      border-radius: 20px;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+      animation: fadeIn 0.6s ease-in-out;
     }
-    .joke-card {
-      width: 280px;
+    #joke-box img {
+      max-width: 100%;
       border-radius: 15px;
-      overflow: hidden;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      background: #fff;
+      margin-bottom: 15px;
+    }
+    #joke-text {
+      font-size: 20px;
+      line-height: 1.5;
+    }
+    button {
+      margin-top: 15px;
+      padding: 12px 25px;
+      font-size: 18px;
+      border: none;
+      border-radius: 10px;
+      background: #ff4d4d;
+      color: white;
+      cursor: pointer;
       transition: 0.3s;
     }
-    .joke-card:hover {
-      transform: scale(1.05);
+    button:hover {
+      background: #e60000;
+      transform: scale(1.1);
     }
-    .joke-card img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-    }
-    .joke-card p {
-      padding: 15px;
-      font-size: 16px;
-      color: #333;
+    @keyframes fadeIn {
+      from {opacity: 0; transform: translateY(20px);}
+      to {opacity: 1; transform: translateY(0);}
     }
   </style>
 </head>
 <body>
-  <h1>🤣 Welcome to Comedy Zone 🤣</h1>
+  <h1>😂 Welcome to Unlimited Comedy 😂</h1>
 
-  <div class="container">
-    <div class="joke-card">
-      <img src="https://i.imgur.com/fnY7j1d.jpeg" alt="Funny Meme">
-      <p>Teacher: Tum exam me kya likh kar aaye?<br>
-      Student: Sir, pen se likha hai!</p>
-    </div>
-
-    <div class="joke-card">
-      <img src="https://i.imgur.com/0rjWQ2T.jpeg" alt="Funny Meme">
-      <p>Doctor: Aapko kis cheez se allergy hai?<br>
-      Patient: Homework se, doctor saab!</p>
-    </div>
-
-    <div class="joke-card">
-      <img src="https://i.imgur.com/Xl0a8wX.jpeg" alt="Funny Meme">
-      <p>GF: Tum mujhe duniya ki sabse khoobsurat ladki samajhte ho?<br>
-      BF: Nahi, filter lagana padega!</p>
-    </div>
-
-    <div class="joke-card">
-      <img src="https://i.imgur.com/HYLP0nN.jpeg" alt="Funny Meme">
-      <p>Boss: Tum late kyun aaye ho?<br>
-      Employee: Sir, alarm clock khud snooze ho gaya tha!</p>
-    </div>
+  <div id="joke-box">
+    <img id="joke-img" src="" alt="Funny Meme">
+    <div id="joke-text">Click the button to get your first joke! 🤣</div>
   </div>
+
+  <button onclick="newJoke()">Next Joke</button>
+
+  <script>
+    const jokes = [
+      {
+        text: "Teacher: Tum late kyun aaye? 🤔<br>Student: Sir, exam ke sapne me pass ho gaya tha, party chal rahi thi! 🎉",
+        img: "https://i.imgflip.com/30zz5g.jpg"
+      },
+      {
+        text: "Doctor: Aapko kis cheez se allergy hai?<br>Patient: Homework se! 📚❌",
+        img: "https://i.imgflip.com/4/2v4z.jpg"
+      },
+      {
+        text: "GF: Tum mujhe miss karte ho?<br>BF: Haan WhatsApp pe, real life me to shanti hai 😅",
+        img: "https://i.imgflip.com/1otk96.jpg"
+      },
+      {
+        text: "Boss: Tum kaam me itne slow kyun ho?<br>Employee: Sir, internet ki tarah hu… buffering pe hu! 🌀",
+        img: "https://i.imgflip.com/5hg3.jpg"
+      },
+      {
+        text: "Wife: Kya tum mujhe chand tak le jaoge?<br>Husband: Pehle petrol ka rate dekh lo! ⛽😂",
+        img: "https://i.imgflip.com/1bij.jpg"
+      }
+    ];
+
+    const colors = ["#fff0f5", "#e6f7ff", "#e6ffe6", "#fff5e6", "#ffe6f0"];
+
+    function newJoke() {
+      const random = jokes[Math.floor(Math.random() * jokes.length)];
+      const randomColor = colors[Math.floor(Math.random() * colors.length)];
+      document.getElementById("joke-text").innerHTML = random.text;
+      document.getElementById("joke-img").src = random.img;
+      document.body.style.background = randomColor;
+    }
+
+    // Auto change jokes every 7 seconds
+    setInterval(newJoke, 7000);
+  </script>
 </body>
 </html>
